# roborex-platform

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
apps/backend/: Dockerfile  alembic.ini  config.py  main.py  requirements.txt
apps/backend/api/: character.py  lesson.py  prompt.py
apps/backend/domains/asset/: __init__.py  model.py  repository.py  schema.py  service.py
apps/backend/domains/character/: model.py  repository.py  schema.py  service.py
apps/backend/domains/job/: model.py  repository.py  schema.py  service.py
apps/backend/domains/lesson/: __init__.py  model.py  repository.py  schema.py  service.py
apps/backend/domains/prompt/: __init__.py  model.py  repository.py  schema.py  service.py
apps/backend/domains/script/: __init__.py  model.py  repository.py  schema.py  service.py
apps/backend/domains/storyboard/: __init__.py  model.py  repository.py  schema.py  service.py
apps/backend/infrastructure/: __init__.py
apps/backend/infrastructure/database/: engine.py  session.py
apps/backend/infrastructure/security/: __init__.py
apps/backend/migrations/: env.py
apps/backend/providers/image/: __init__.py  chatgpt.py
apps/backend/shared/: __init__.py  exceptions.py
apps/studio/: README.md
docker/: .env.example  Caddyfile  docker-compose.yml
docs/api/: README.md
docs/architecture/: README.md
docs/database/: README.md
docs/deployment/: README.md
scripts/: backup.sh
scripts/systemd/: roborex-backup.service  roborex-backup.timer
tests/: __init__.py  test_health.py
(+5 files in other folders)
