[project]
name = "roborex-platform"
version = "0.1.0"
description = "AI-powered educational content generation platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.13,<2.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "minio>=7.2,<8.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.5,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "ruff>=0.9,<1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["apps/backend"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
